# OpenPhoenix-ERP

./: Bestandswächter.pyw  Kundenverwaltung.pyw  LICENSE  Launcher.pyw  README.md
OpenPhoenixERP_V2/: README.md  config.toml  install.sh  main.py  openphoenix.db  pyproject.toml
OpenPhoenixERP_V2/config/: column_widths.json
OpenPhoenixERP_V2/core/: config.py  utils.py
OpenPhoenixERP_V2/core/audit/: service.py
OpenPhoenixERP_V2/core/db/: engine.py
OpenPhoenixERP_V2/core/models/: __init__.py
OpenPhoenixERP_V2/core/services/: credential_service.py  kunden_service.py  lager_service.py  mahnwesen_service.py  pdf_service.py  platzhalter_service.py  rechnungen_service.py  xrechnung_service.py
OpenPhoenixERP_V2/tests/core/: test_database.py  test_lager_service.py  test_mahnwesen_service.py  test_pdf_service.py  test_rechnungen_service.py
OpenPhoenixERP_V2/ui/: main_window.py
OpenPhoenixERP_V2/ui/components/: column_store.py  widgets.py
OpenPhoenixERP_V2/ui/modules/dashboard/: panel.py
OpenPhoenixERP_V2/ui/modules/einstellungen/: panel.py
OpenPhoenixERP_V2/ui/modules/kunden/: dialog.py  dokumente_dialog.py  notizen_widget.py  panel.py
OpenPhoenixERP_V2/ui/modules/lager/: artikel_dialog.py  buchung_dialog.py  panel.py
OpenPhoenixERP_V2/ui/modules/mahnwesen/: panel.py
OpenPhoenixERP_V2/ui/modules/rechnungen/: dialog.py  kunden_auswahl.py  panel.py  posten_dialog.py
OpenPhoenixERP_V2/ui/modules/rechnungskorrektur/: panel.py
OpenPhoenixERP_V2/ui/modules/xrechnung/: panel.py
OpenPhoenixERP_V2/ui/theme/: theme.py
OpenPhoenixERP_V3/: config.toml  install.sh  main.py  openphoenix.db  openphoenix.db-shm  openphoenix.db-wal  pyproject.toml
_v1_legacy/: 4XRechnung (1).pyw  Dashboard (1).pyw  DatenSchloss (1).pyw  (+4 more)
(+55 files in other folders)
