[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openphoenix-erp"
version = "2.0.0"
description = "Freies, modulares ERP-System für kleine und mittlere Unternehmen"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["erp", "buchhaltung", "rechnungen", "kmu", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "PySide6>=6.7.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "reportlab>=4.0.0",
    "lxml>=5.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "pyperclip>=1.8.0",
    "cryptography>=42.0.0",
    "tomli-w>=1.0.0",       # TOML schreiben (Python 3.11 liest TOML nativ)
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
openphoenix = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
